environments/dev/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.3
          args:
            [
              "-Djboss.socket.binding.port-offset=100",
              "-Dkeycloak.profile.feature.upload_scripts=enabled",
              "start-dev",
            ]
          ports:
            - containerPort: 8180
          volumeMounts:
            - name: keycloak-data
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: keycloak-data
          hostPath:
            path: /path/on/host/keycloak
